[package]
name = "atom"
version = "0.1.0"
authors = ["huoju <virushuo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.0"
diesel = { version = "1.0.0", features = ["postgres","chrono", "r2d2"] }
dotenv = "0.9.0"
atom_syndication = "0.6"
curl = "0.4.22"
rust-crypto = "0.2.36"
actix-web = "1.0.7"
actix-cors = "0.1.0"
sha3 = "0.8.2"
openssl = "0.10.24"
fnv = "1.0.6"
hex ="0.4.0"
bytes = "0.4.12"
sentry = "0.12.0"
jobpool = "0.3.8"
[dependencies.impl2001-rs]
git = "https://github.com/Press-One/impl2001-rs"
branch = "master"

[dependencies.qs-rs]
git = "https://github.com/virushuo/qs-rs"
branch = "master"

[dependencies.prs-utility-rust]
git = "https://github.com/virushuo/prs-utility-rust"
branch = "master"
